# LibArdaGen

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp
include/: ArdaGen.h
include/areas/: ArdaContinent.h  ArdaProvince.h  ArdaRegion.h  AreaGen.h  AreaUtils.h  GameProvince.h  GameRegion.h  ScenarioContinent.h  SuperRegion.h
include/characters/: Character.h
include/civilisation/: ArdaCivilisations.h  CivilisationLayer.h  CivilizationGeneration.h  NaturalFeatures.h
include/countries/: Country.h  CountryGen.h
include/culture/: Culture.h  CultureGroup.h  NameUtils.h  Religion.h
include/flags/: Flag.h
include/generic/: ArdaGen.h  CivilizationGeneration.h  ScenarioGenerator.h  VictoryPoint.h
include/io/: FormatConverter.h  GenericParsing.h  Textures.h
include/language/: Dataset.h  Language.h  LanguageGenerator.h  LanguageGroup.h  MarkovNameGenerator.h
include/parsing/: ArdaParserUtils.h  ParserUtils.h
include/rendering/: ArdaVisualisation.h
include/utils/: ArdaUtils.h
source/: ArdaGen.cpp
source/areas/: ArdaContinent.cpp  ArdaProvince.cpp  ArdaRegion.cpp  AreaGen.cpp  GameProvince.cpp  GameRegion.cpp  ScenarioContinent.cpp  SuperRegion.cpp
source/characters/: Character.cpp
source/civilisation/: ArdaCivilisations.cpp  CivilizationGeneration.cpp  NaturalFeatures.cpp
source/countries/: Country.cpp  CountryGen.cpp
source/culture/: Culture.cpp  CultureGroup.cpp  NameUtils.cpp  Religion.cpp
source/flags/: Flag.cpp
source/generic/: ArdaGen.cpp  CivilizationGeneration.cpp  ScenarioGenerator.cpp
source/io/: FormatConverter.cpp  GenericParsing.cpp  Textures.cpp
source/language/: Language.cpp  LanguageGenerator.cpp  LanguageGroup.cpp  MarkovNameGenerator.cpp
source/parsing/: ArdaParserUtils.cpp  ParserUtils.cpp
source/rendering/: ArdaVisualisation.cpp
source/utils/: ArdaUtils.cpp  ScenarioUtils.cpp
